--- a/src/custom.scss
+++ b/src/custom.scss
@@ -4,3 +4,32 @@
 $blue: #61dbfb;
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
+
+@font-face {
+  font-family: 'Monaspace Neon Regular';
+  src: url('./fonts/MonaspaceNeon-Regular.woff2') format('woff2'),
+       url('./fonts/MonaspaceNeon-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Monaspace Neon SemiBold';
+  src: url('./fonts/MonaspaceNeon-SemiBold.woff2') format('woff2'),
+       url('./fonts/MonaspaceNeon-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Monaspace Krypton Medium';
+  src: url('./fonts/MonaspaceKrypton-Medium.woff2') format('woff2'),
+       url('./fonts/MonaspaceKrypton-Medium.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Monaspace Krypton SemiBold';
+  src: url('./fonts/MonaspaceKrypton-SemiBold.woff2') format('woff2'),
+       url('./fonts/MonaspaceKrypton-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
